# cpp_boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  Journal.md  README.md  add_blank_lines.sh  cpp_setup_tools.md  log4cxx_epa.spec  modern_cpp_c01.md  notes.md
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
examples/: CMakeLists.txt  catch2_test.cpp  cxxopts_test.cpp  docopt_test.cpp  doctest_test.cpp  glfw_test.cpp  imgui_test.cpp  sdl_test.cpp  sfml_test.cpp  spdlog_test.cpp
project_template/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
project_template/cmake/: ClangFormat.cmake  CppCheck.cmake
project_template/src/: CMakeLists.txt  main.cpp
